# glade

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  BUGS  CONTRIBUTING.md  COPYING  COPYING.LGPL  ChangeLog  HACKING  INSTALL  INTERNALS  MAINTAINERS  Makefile.am  NEWS  README  README.md  README.svn  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  config.h.win  configure  configure.ac  configure.in  glade-2.desktop.in  glade-3.desktop.in  glade-3.desktop.in.in  glade-rules.mk  glade.doap  glade2.desktop.in  glade3.doap  id.po  ltmain.sh  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Glade.json  (+1 more)
bindings/python/: Makefile.am  glade-python-gwa.c  glade-python-gwa.defs  glade-python-gwa.override  glade-python.c  gladeui.defs  gladeui.override  gladeuimodule.c
bindings/python-gladeui/: Makefile.am  __init__.py  gladeui.defs  gladeui.override  gladeuimodule.c  update-defs.sh
data/: .gitignore  Makefile.am  glade-3.desktop.in.in  glade.appdata.xml.in  glade.desktop.in.in  gladeui-1.0.pc.in  gladeui-2.0.pc.in  libgladeui-1.0.pc.in  meson.build  org.gnome.Glade.appdata.xml.in  org.gnome.Glade.desktop.in.in
data/gettext/: Makefile.am
data/icons/: Makefile.am  meson.build
doc/: .cvsignore  .gitignore  Makefile.am  catalogintro.sgml  children.sgml  glade-docs.sgml  glade.types  gladegjs.sgml  gladepython.sgml  gladeui-docs.sgml  gladeui-docs.xml  gladeui-sections.txt  gladeui.types  meson.build  properties.sgml  version.xml.in  widgetclasses.sgml
doc/tmpl/: glade-app.sgml  glade-base-editor.sgml  glade-catalog.sgml  glade-clipboard-view.sgml  glade-clipboard.sgml  glade-command.sgml  glade-design-layout.sgml  glade-design-view.sgml  glade-editor-property.sgml  glade-editor.sgml  glade-fixed-manager.sgml  glade-fixed.sgml  glade-inspector.sgml  glade-palette.sgml  glade-parameter.sgml  glade-parser.sgml  glade-placeholder.sgml  glade-project-view.sgml  glade-project.sgml  glade-property-class.sgml  glade-property.sgml  glade-signal-editor.sgml  glade-signal.sgml  glade-utils.sgml  glade-widget-action.sgml  glade-widget-adaptor.sgml  glade-widget-class.sgml  glade-widget.sgml  gladeui-unused.sgml
glade3_stable/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  TODO  configure.ac
glade3_stable/bindings/: Makefile.am
glade3_stable/data/: glade-3.desktop.in.in
glade3_stable/doc/: catalogintro.sgml  children.sgml
glade3_stable/gladeui/: glade-app.c  glade-base-editor.c  glade-base-editor.h  glade-binding.h  glade-builtins.c  glade-builtins.h  glade-clipboard.h  glade-custom.h  glade-debug.h  glade-design-layout.c  glade-design-view.h  glade-editor-property.h  glade-editor.c  glade-editor.h  glade-fixed.c  glade-id-allocator.h  glade-palette-box.c  glade-palette-item.h  glade-palette.h  glade-parameter.h  glade-placeholder.c  glade-placeholder.h  glade-project-view.h  glade-project.c  glade-property-class.c  glade-utils.c  glade-xml-utils.c  glade-xml-utils.h  glade.h
glade3_stable/help/: Makefile.am
glade3_stable/m4/: python.m4
glade3_stable/plugins/: Makefile.am
glade3_stable/po/: POTFILES.in  ar.po  az.po  ca.po  de.po  el.po  en_GB.po  fi.po  fr.po  hu.po  ko.po  ms.po  nl.po  pl.po  pt.po  sk.po  ta.po  tr.po  zh_HK.po
gladeui/: .gitignore  Makefile.am  glade-accumulators.c  glade-accumulators.h  glade-adaptor-chooser-widget.c  glade-adaptor-chooser-widget.h  glade-adaptor-chooser-widget.ui  glade-adaptor-chooser.c  glade-adaptor-chooser.h  glade-adaptor-chooser.ui  glade-app.c  glade-app.h  glade-base-editor.c  glade-base-editor.h  glade-base-editor.ui  glade-binding.c  glade-binding.h  glade-bool-toggle.c  glade-bool-toggle.h  glade-builtins.c  glade-builtins.h  glade-catalog.c  glade-catalog.h  glade-cell-renderer-icon.c  glade-cell-renderer-icon.h  glade-clipboard-view.c  glade-clipboard-view.h  glade-clipboard.c  glade-clipboard.h  glade-command.c  glade-command.h  glade-composite-template.c  glade-composite-template.h  glade-cursor.c  glade-cursor.h  glade-custom.c  glade-custom.h  glade-debug.c  glade-debug.h  glade-design-layout.c  (+117 more)
man/: Makefile.am  glade-previewer.xml  glade.xml  meson.build
pixmaps/: Makefile.am
pixmaps/16x16/: Makefile.am
pixmaps/22x22/: Makefile.am
plugins/: Makefile.am  glade-catalog.dtd  meson.build
plugins/gjs/: Makefile.am  (+2 more)
src/: .cvsignore  .gitignore  Makefile.am  fixed_bg.xpm  glade-3.pc.in  glade-3.rc.in  glade-accumulators.c  glade-accumulators.h  glade-app.c  glade-app.h  glade-base-editor.c  glade-base-editor.h  glade-binding.c  glade-binding.h  glade-builtins.c  glade-builtins.h  glade-callbacks.h  glade-catalog.c  glade-catalog.h  glade-choice.c  glade-choice.h  glade-clipboard-view.c  glade-clipboard-view.h  glade-clipboard.c  glade-clipboard.h  glade-close-button.c  glade-close-button.h  glade-command.c  glade-command.h  glade-cursor.c  glade-cursor.h  glade-dbus.c  glade-dbus.h  glade-dbus.xml  glade-debug.c  glade-debug.h  glade-design-layout.c  glade-design-view.c  glade-design-view.h  glade-devhelp.c  (+102 more)
tests/: Makefile.am  add-child.c  create-widgets.c  meson.build  modules.c  python-plugin.xml  pythonplugin.py  pythonplugin.xml  refcount.c  test-python-gladeui.py  toplevel-order-resources.gresource.xml  toplevel-order.c  toplevel_order_test.glade  toplevel_order_test2.glade  toplevel_order_test3.glade  toplevel_order_test4.glade  toplevel_order_test5.glade  toplevel_order_test6.glade
widgets/: .cvsignore  Makefile.am  adding-widgets.txt  bonobo.xml.in  canvas.xml.in  catalog.xml  glade-catalog.dtd  glade-palette.xml  gnome.xml.in  gtk+.catalog  gtk+.xml.in  gtk-additional.xml  gtk-base.xml  gtk-dialogs.xml  gtk-obsolete.xml  gtkaccellabel.xml  gtkalignment.xml  gtkarrow.xml  gtkaspectframe.xml  gtkbox.xml  gtkbutton.xml  gtkbuttonbox.xml  gtkcalendar.xml  gtkcheckbutton.xml  gtkcolorselection.xml  gtkcolorselectiondialog.xml  gtkcombo.xml  gtkcontainer.xml  gtkcurve.xml  gtkdialog.xml  gtkdrawingarea.xml  gtkentry.xml  gtkeventbox.xml  gtkfileselection.xml  gtkfixed.xml  gtkfontselection.xml  gtkfontselectiondialog.xml  gtkframe.xml  gtkgammacurve.xml  gtkhandlebox.xml  (+41 more)
(+626 files in other folders)
